# rufus

./: .gitignore  CLAIMS.md  LICENSE  README.md
docs/: control.md  episodes.md  evaluation.md  operations.md  plan.md  setup.md  strategies.md
ros2_ws/src/rufus_sim_adapters/: package.xml  setup.cfg  setup.py
ros2_ws/src/rufus_sim_adapters/rufus_sim_adapters/: fixed_wing_adapter.py  quad_adapter.py  rover_adapter.py
ros2_ws/src/rufus_sim_adapters/test/: test_fixed_wing_adapter.py  test_quad_adapter.py  test_rover_adapter.py
ros2_ws/src/rufus_sim_bringup/: CMakeLists.txt  package.xml
ros2_ws/src/rufus_sim_bringup/config/: copter_tune.parm  mavros_pluginlists.yaml  r1_rover_tune.parm
ros2_ws/src/rufus_sim_bringup/launch/: iris_sim.launch.py  multi_agent_sim.launch.py  zephyr_sim.launch.py
ros2_ws/src/rufus_sim_eval/: package.xml  setup.cfg  setup.py
ros2_ws/src/rufus_sim_eval/config/sweeps/: rover_determinism_check.yaml  rover_v_max_smoke.yaml
ros2_ws/src/rufus_sim_eval/rufus_sim_eval/: batch_runner.py  chain.py  metrics.py  step_response.py  sweep.py
ros2_ws/src/rufus_sim_eval/test/: test_step_response.py
ros2_ws/src/rufus_sim_game/: package.xml  setup.cfg  setup.py
ros2_ws/src/rufus_sim_game/config/episodes/: rover_capture_1v1.yaml
ros2_ws/src/rufus_sim_game/launch/: episode.launch.py
ros2_ws/src/rufus_sim_game/rufus_sim_game/: agent_params.py  episode_runner.py  predicate_engine.py  world_pose_bridge.py
ros2_ws/src/rufus_sim_game/test/: test_agent_params.py  test_predicate_engine.py
ros2_ws/src/rufus_sim_msgs/: CMakeLists.txt  package.xml
ros2_ws/src/rufus_sim_msgs/msg/: AgentState.msg  Capability.msg  GameState.msg  RoleAssignment.msg  SaturationFlags.msg  TerminationEvent.msg
ros2_ws/src/rufus_sim_strategies/: package.xml  setup.cfg  setup.py
ros2_ws/src/rufus_sim_strategies/config/strategies/: mixed_team_2v1.yaml  plane_capture_pp_vs_cb.yaml  quad_capture_pp_vs_cb.yaml  rover_2v1.yaml  rover_3v3.yaml  rover_capture_pp_vs_cb.yaml  rover_capture_smoke.yaml
ros2_ws/src/rufus_sim_strategies/launch/: episode_with_strategies.launch.py
ros2_ws/src/rufus_sim_strategies/rufus_sim_strategies/: __init__.py  heading.py  reference.py  registry.py  strategy.py  strategy_runner.py
ros2_ws/src/rufus_sim_strategies/test/: test_reference.py
ros2_ws/src/rufus_sim_worlds/: CMakeLists.txt  package.xml
ros2_ws/src/rufus_sim_worlds/config/agents/: four_agents.yaml  one_plane.yaml  one_quad.yaml  one_rover.yaml  six_rovers.yaml  three_rovers.yaml  two_planes.yaml  two_quads.yaml  two_rovers.yaml
ros2_ws/src/rufus_sim_worlds/env-hooks/: rufus_sim_worlds.dsv.in
ros2_ws/src/rufus_sim_worlds/scripts/: generate_world.py
ros2_ws/src/rufus_sim_worlds/templates/: iris.sdf.in  r1_rover.config.in  r1_rover.sdf.in  world.sdf.in  zephyr.sdf.in
ros2_ws/src/rufus_sim_worlds/worlds/: iris_minimal.sdf  zephyr_minimal.sdf
scripts/: dummy_pursuer.py  fixed_wing_bench.py  plot_sweep.py  quad_bench.py  rover_bench.py
