<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format3.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rufus_sim_adapters</name>
  <version>0.0.1</version>
  <description>
    Velocity-command adapters bridging pursuit-evasion strategy
    cmd_vel to ArduPilot SITL via MAVROS. One adapter per platform
    (rover, quadrotor, fixed-wing).
  </description>
  <maintainer email="iman.shames@tuta.io">Iman Shames</maintainer>
  <license>Apache-2.0</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>mavros_msgs</exec_depend>
  <exec_depend>rcl_interfaces</exec_depend>
  <exec_depend>rufus_sim_msgs</exec_depend>
  <exec_depend>ros2launch</exec_depend>

  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
