<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format3.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rufus_sim_strategies</name>
  <version>0.0.1</version>
  <description>
    Pursuit-evasion strategies. Defines the Strategy ABC and ships
    reference strategies (PurePursuitPursuer, ConstantBearingEvader,
    LeadPursuer) plus a per-agent strategy_runner node that consumes
    the GameState contract from rufus_sim_game and publishes the
    per-agent cmd_vel topic.
  </description>
  <maintainer email="iman.shames@tuta.io">Iman Shames</maintainer>
  <license>Apache-2.0</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>rufus_sim_msgs</exec_depend>
  <exec_depend>python3-yaml</exec_depend>
  <exec_depend>ros2launch</exec_depend>

  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
